--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -149,9 +149,24 @@
     <Compile Include="Migrations\201902201910112_InitialCreate.Designer.cs">
       <DependentUpon>201902201910112_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902211738170_MaxLengthOnNames.cs" />
+    <Compile Include="Migrations\201902211738170_MaxLengthOnNames.Designer.cs">
+      <DependentUpon>201902211738170_MaxLengthOnNames.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201902211741286_ColumnFirstName.cs" />
+    <Compile Include="Migrations\201902211741286_ColumnFirstName.Designer.cs">
+      <DependentUpon>201902211741286_ColumnFirstName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201902211829478_ComplexDataModel.cs" />
+    <Compile Include="Migrations\201902211829478_ComplexDataModel.Designer.cs">
+      <DependentUpon>201902211829478_ComplexDataModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\Department.cs" />
     <Compile Include="Models\Enrollment.cs" />
+    <Compile Include="Models\Instructor.cs" />
+    <Compile Include="Models\OfficeAssignment.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -217,6 +232,15 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201902201910112_InitialCreate.resx">
       <DependentUpon>201902201910112_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902211738170_MaxLengthOnNames.resx">
+      <DependentUpon>201902211738170_MaxLengthOnNames.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902211741286_ColumnFirstName.resx">
+      <DependentUpon>201902211741286_ColumnFirstName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902211829478_ComplexDataModel.resx">
+      <DependentUpon>201902211829478_ComplexDataModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
